Bug 80140 - The "Spellcheck of entire document has been completed" dialog hangs when doing spell check in an Impress file
Summary: The "Spellcheck of entire document has been completed" dialog hangs when doin...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta2
Hardware: All All
: highest blocker
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.0.2 target:4.2.6
Keywords: bibisected, regression
: 80139 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-06-17 14:52 UTC by Kevin Suo
Modified: 2015-12-17 08:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-06-17 14:52:48 UTC
Description:
When I was testing Moztrap case #40, I found that spell check does not work in Impress odp file anymore. I have reported one bug in Bug 80139. However, this bug report (I mean this one you are now reading) is about another bug behaviour, which may be related to bug 80139.

Steps to reproduce:
1. Open attachment 101235 [details] in bug 80139;
2. Go to "Tools - Options - Language Settings - Languages", set language for document to "English-USA". Make sure to check "For the current document only". Press OK.
3. Click one of the text boxes in the slides (for example, I click somewhere between the word"Smoothly" of the 1st slide.
4. Press F7, or click "Tools - Spelling"

Current Behaviour:
The dialog "Spellcheck of entire document has been completed" pops up, hangs, and can not be closed. I have to kill the soffice.bin process.

Expected:
"Spelling and Grammar: [Language]" window pops up, and allow me to "change" and "ignore" the spelling errors. 
When finished checking, the dialog "Spellcheck of entire document has been completed" pops up, and I can close it by press OK button.

OS: Ubuntu 14.04 X86
Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810

It works OK in 4.2.5.2, so it's a regression in 4.3.0.0 beta2.
Comment 1 Kevin Suo 2014-06-17 14:53:39 UTC
Added bug 80139 to see also.
Comment 2 Jacques Guilleron 2014-06-17 20:50:17 UTC
Hello suokunlong,

I reproduce with LO 4.4.0.0.alpha0+
Build ID: 488f31200094d7237d45545ab227014831a1f8e6
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-15_05:02:39
under Windows 7 Home Premium

regards,

Jacques
Comment 3 Kevin Suo 2014-06-18 01:49:40 UTC
Set Importance to highest and added to MAB4.3 list.
Comment 4 Joel Madero 2014-06-18 02:27:16 UTC
FWIW I don't think that Step 2 is necessary to reproduce. Bibisect below:

 4fcd68ce4979f85fda4568f4b419a4b41d07345f is the first bad commit
commit 4fcd68ce4979f85fda4568f4b419a4b41d07345f
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 18:45:33 2014 +0000

    source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
    
    commit 2c4621c87ed3a7b19de195c21494c9a381e72b2e
    Author:     Noel Grandin <noel@peralex.com>
    AuthorDate: Wed Feb 26 11:30:40 2014 +0200
    Commit:     Noel Grandin <noel@peralex.com>
    CommitDate: Thu Feb 27 12:30:29 2014 +0200
    
        editeng: sal_Bool->bool
    
        Change-Id: I659497b79fe809865639429f2744d815f2a1f3e2

:100644 100644 5c688d732bb5e3c2e2e590c92dccc5bb231e9f26 0eacdd85eed1050b13e09581b1b690bc2f10bf42 M	ccache.log
:100644 100644 0c1ce0eef885c4f1690557efc0fd5b591611b57d ecc1fd1889983a2d218a881155a9c0d43844c025 M	commitmsg
:100644 100644 fba2fb23d18fb2c754eddad1a160c39166dfe9e1 daae8edb8d62c5b27e10d58dc3fdd55f81071968 M	make.log
:040000 040000 231495c39d790222e733e96a38c10584b0181901 f0938573f30b23c4f669b2f2fb02090e7c33e449 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
# bad: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect bad a900e72b6357882284c5955bdf939bf14269f5fb
# good: [e1d0365cd2b073a859f59ad0a4584385a66dc611] source-hash-2eea96c702a44ab009743b0d22ef639127f0b57b
git bisect good e1d0365cd2b073a859f59ad0a4584385a66dc611
# skip: [8f55938c891ee3e4c252b193dba9419f130537bc] source-hash-93f3f72d18e551c8edd6a010cb78d9cbe404f8ef
git bisect skip 8f55938c891ee3e4c252b193dba9419f130537bc
# bad: [7518fcaf863962bf4f6f3cdf84f6e42f0f59225f] source-hash-ab1f5eab4830f00dbbd7c883b98b59975ecd3bb1
git bisect bad 7518fcaf863962bf4f6f3cdf84f6e42f0f59225f
# good: [2e56ba511184c20aa8ada64d35e9f1d27d596790] source-hash-8be2cbc856fb5ba61203872d8f01ed8162aa4256
git bisect good 2e56ba511184c20aa8ada64d35e9f1d27d596790
# good: [6738b3ad82bbc77ce9a788be07da490e530de3ff] source-hash-43fc67adcc3bdc5efaaaf9b0d65e53e99880b18a
git bisect good 6738b3ad82bbc77ce9a788be07da490e530de3ff
# bad: [0e47d65bd5b2b2e544679d254078754fa456ce3d] source-hash-09e5de8278dd8f13adcf614db35c8a8a04ba8e47
git bisect bad 0e47d65bd5b2b2e544679d254078754fa456ce3d
# bad: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect bad 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# good: [bc8862bec54976cb779628ed7b44397b5c7be10b] source-hash-5c57c9b6eb30265fe7312ff2b4d6ce7363cf2006
git bisect good bc8862bec54976cb779628ed7b44397b5c7be10b
# first bad commit: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
Comment 5 Kevin Suo 2014-06-18 02:41:06 UTC
(In reply to comment #4)
> FWIW I don't think that Step 2 is necessary to reproduce. Bibisect below:

When I was testing on Ubuntu yesterday, without step 2 it always behaves as bug 80139 (spell check pops up and vanishes immediately).
But today while I am testing on windows xp, I can reproduce the dialog hang without step 2.
So this may be different on windows and linux?
Comment 6 Marina Latini (SUSE) 2014-06-18 08:18:30 UTC
Bug 80139 and bug 80140 can be reproduced also with Draw!

When you press F7 (or Tools->Spelling) I can confirm two behaviour. 

With a blank document (odp or odg) I reproduce the bug 80140, with a document with some content I can reproduce the bug 80139.


* Changed arch to All because both x86 and x86_64 are affected.

* importance: 
----highest -> this is a MAB
----blocker -> can't use spellcheck or LibreOffice hangs.

* Version: 4.3.0.0.beta2
* Build ID: a06aa316117a6ff0f05c697c82831c227812d810
* OS Ubuntu 14.04 x86_64
Comment 7 Caolán McNamara 2014-06-18 09:57:48 UTC
I believe this is a regression from 57779aa0195d77239b339c6dbe17209b3f0cc4ee where I see an inverted logic from false to true in OutLiner::SpellNextDocument
Comment 8 Commit Notification 2014-06-18 10:13:24 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f53e88d14d182fb3af3787e8dac2126ac39551fa

Resolves: fdo#80140 inverted spell-check continue logic



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-06-18 10:15:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9ef07ed691399119b6bc5f1d2d79222667766c6&h=libreoffice-4-3

Resolves: fdo#80140 inverted spell-check continue logic


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2014-06-18 12:39:45 UTC
*** Bug 80139 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2014-06-18 13:11:27 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce61e7f9debfc7572ce4bb30d13e13aca79f010a

Related: fdo#80140 a11y crash on changing text via spellchecker in impress



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-06-18 13:13:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d5798014060b913c57aa7c602d01b0c1b8225029&h=libreoffice-4-3

Related: fdo#80140 a11y crash on changing text via spellchecker in impress


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Marina Latini (SUSE) 2014-06-19 10:07:47 UTC
VERIFIED on LibreOffice:

* Version: 4.4.0.0.alpha0+
* Build ID: d2c469cc16bf303d4f5065a438d5252a31b3a564
* TinderBox: Linux-rpm_deb-x86_64@46-TDF, 
* Branch:master, 
* Time: 2014-06-19_06:25:05

* OS: Ubuntu 14.04 x86_64
Comment 14 Commit Notification 2014-06-23 03:43:09 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a5727ba35ca2cff191208625448994202a94df6&h=libreoffice-4-2

Related: fdo#80140 a11y crash on changing text via spellchecker in impress


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Robinson Tryon (qubit) 2015-12-17 08:23:55 UTC Comment hidden (obsolete)