Resolves: fdo#80140 inverted spell-check continue logic

regression from 57779aa0195d77239b339c6dbe17209b3f0cc4ee
"editeng: sal_Bool->bool"

Change-Id: I6042830f5ba1822b1ba59326895080f3375cd701